--- a/app/views/temperatures/_form.html.erb
+++ b/app/views/temperatures/_form.html.erb
@@ -24,12 +24,8 @@
     <%= f.text_field :max %>
   </div>
   <div class="field">
-    <%= f.label :avg %><br>
-    <%= f.text_field :avg %>
-  </div>
-  <div class="field">
-    <%= f.label :station_id %><br>
-    <%= f.number_field :station_id %>
+    <%= f.label :ground %><br>
+    <%= f.text_field :ground %>
   </div>
   <div class="actions">
     <%= f.submit %>
