--- a/app/views/temperatures/index.html.erb
+++ b/app/views/temperatures/index.html.erb
@@ -6,9 +6,8 @@
       <th>Date</th>
       <th>Min</th>
       <th>Max</th>
-      <th>Avg</th>
-      <th>Station</th>
-      <th colspan="3"></th>
+      <th>Ground</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -16,11 +15,9 @@
     <% @temperatures.each do |temperature| %>
       <tr>
         <td><%= temperature.date %></td>
-        <td><%= temperature.min %></td>
-        <td><%= temperature.max %></td>
-        <td><%= temperature.avg %></td>
-        <td><%= temperature.station_id %></td>
-        <td><%= link_to 'Show', temperature %></td>
+        <td><%= temperature.min %>°C</td>
+        <td><%= temperature.max %>°C</td>
+        <td><%= temperature.ground %>°C</td>
         <td><%= link_to 'Edit', edit_temperature_path(temperature) %></td>
         <td><%= link_to 'Destroy', temperature, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
