--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,10 +12,10 @@
 </div>
 
 <%= form_tag '#', :method => 'get', :class => 'form-inline' do %>
-  <%= collection_select :filter, :event_type_id, EventType.all, :id, :name, :include_blank => 'Ereignis-Typ', :class => 'form-control' %>
-  <%= collection_select :filter, :sensor_id, Sensor.all, :id, :name, :include_blank => 'Lichtschranke', :class => 'form-control' %>
-  <%= collection_select :filter, :species_id, Species.all, :id, :name, :include_blank => 'Spezies', :class => 'form-control' %>
-  <%= collection_select :filter, :sex_id, Sex.all, :id, :name, :include_blank => 'Geschlecht', :class => 'form-control' %>
+  <%= collection_select :filter, :event_type_id, EventType.all, :id, :name, {:include_blank => 'Ereignis-Typ', :class => 'form-control'}, :multiple => true %>
+  <%= collection_select :filter, :sensor_id, Sensor.all, :id, :name, {:include_blank => 'Lichtschranke', :class => 'form-control'}, :multiple => true %>
+  <%= collection_select :filter, :species_id, Species.all, :id, :name, {:include_blank => 'Spezies', :class => 'form-control'}, :multiple => true %>
+  <%= collection_select :filter, :sex_id, Sex.all, :id, :name, {:include_blank => 'Geschlecht', :class => 'form-control'}, :multiple => true %>
 
   <%= collection_select :filter, 'precipitation_amounts', Precipitation.amounts, :to_s, :to_s, {:include_blank => 'Niederschlagsmenge', :class => 'form-control'}, :multiple => true %>
 
