Save events filter in a session cookie

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,7 +4,7 @@
       <div class="badge"><%= event_type.name %>: <%= event_type.events.count %></div>
     <% end %>
   </div>
-  <h1>Listing events <small>Total: <%= @events.size %></small></h1>
+  <h1>Beobachtungen <small>Total: <%= @events.size %></small></h1>
 </header>
 
 <div class="pull-right">
