--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
         <nav class="navbar" role="navigation">
           <ul class="nav navbar-nav">
-            <li><%= link_to 'Lichtschrankenereignisse', events_path %></li>
+            <li><%= link_to 'Beobachtungen', events_path %></li>
             <li><%= link_to 'Aufnahmen', images_path %></li>
             <li><%= link_to 'Niederschläge/Aktivität', precipitations_path %></li>
             <li><%= link_to 'Temperaturen', temperatures_path %></li>
