--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -8,8 +8,7 @@
 </header>
 
 <div class="pull-right">
-  <%= link_to 'New Event', new_event_path, :class => 'btn btn-link' %>
-</div>
+  <%= link_to 'Neue Beobachtung
 
 <%= form_tag '#', :method => 'get', :class => 'form-inline' do %>
   <%= collection_select :filter, :event_type_id, EventType.all, :id, :name, {:include_blank => 'Ereignis-Typ', :class => 'form-control'}, :multiple => true %>
