--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,5 @@
 <header class="page-header">
-  <h1>Neues Ereignis erfassen</h1>
+  <h1>Neue Beobachtung erfassen</h1>
 </header>
 
 <%= render 'form' %>
