--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -20,7 +20,7 @@
 <% end %>
 
 <div class="pull-right">
-  <%= link_to 'New Image', new_image_path, :class => 'btn btn-link' %>
+  <%= link_to 'Neue Aufnahme', new_image_path, :class => 'btn btn-link' %>
 </div>
 
 <%= form_tag '#', :method => 'get', :class => 'form-inline' do %>
