--- a/app/views/sensors/index.html.erb
+++ b/app/views/sensors/index.html.erb
@@ -1,10 +1,12 @@
-<h1>Listing sensors</h1>
+<header class="page-header">
+  <h1>Sensoren</h1>
+</header>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -12,7 +14,6 @@
     <% @sensors.each do |sensor| %>
       <tr>
         <td><%= sensor.name %></td>
-        <td><%= link_to 'Show', sensor %></td>
         <td><%= link_to 'Edit', edit_sensor_path(sensor) %></td>
         <td><%= link_to 'Destroy', sensor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
