--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -25,6 +25,9 @@
   <%= link_to 'Gib mir alles!', events_path, :class => 'btn btn-default' %>
 <% end %>
 
+<canvas id="myChart" width="900" height="250"></canvas>
+
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -74,3 +77,55 @@
 <br>
 
 <%= link_to 'New Event', new_event_path %>
+
+<script type="text/javascript">
+  // Get the context of the canvas element we want to select
+  var ctx = document.getElementById('myChart').getContext('2d');
+
+  var data = {
+    labels: [<%= @events.map{|e| e.timestamp.to_date.to_s }.uniq.sort.map{|d| ' "%s"' % d }.join(', ').html_safe %>],
+    datasets: [
+      <% EventType.all.each do |event_type| %>
+      <% col = event_type.id == 1 ? '30,220,30' : '220,30,30' %>
+        {
+          label: "<%= event_type %>",
+          fillColor: "rgba(<%= col %>,0.5)",
+          strokeColor: "rgba(<%= col %>,0.8)",
+          highlightFill: "rgba(<%= col %>,0.75)",
+          highlightStroke: "rgba(<%= col %>,1)",
+          data: [<%= @events.select{|e| e.event_type == event_type }.group_by{|e| e.timestamp.to_date.to_s }.map{|g, e| e.size.to_s }.join(', ') %>]
+        },
+      <% end %>
+    ]
+  };
+
+  var options = {
+    //Boolean - Whether the scale should start at zero, or an order of magnitude down from the lowest value
+    scaleBeginAtZero : true,
+
+    //Boolean - Whether grid lines are shown across the chart
+    scaleShowGridLines : true,
+
+    //String - Colour of the grid lines
+    scaleGridLineColor : "rgba(0,0,0,.05)",
+
+    //Number - Width of the grid lines
+    scaleGridLineWidth : 1,
+
+    //Boolean - If there is a stroke on each bar
+    barShowStroke : true,
+
+    //Number - Pixel width of the bar stroke
+    barStrokeWidth : 2,
+
+    //Number - Spacing between each of the X value sets
+    barValueSpacing : 5,
+
+    //Number - Spacing between data sets within X values
+    barDatasetSpacing : 1
+  };
+
+  var myBarChart = new Chart(ctx).Bar(data, options);
+  myBarChart.update();
+
+</script>
