--- a/app/views/species/_form.html.erb
+++ b/app/views/species/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@species) do |f| %>
+<%= form_for @species, :html => {:class => 'form'} do |f| %>
   <% if @species.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@species.errors.count, "error") %> prohibited this species from being saved:</h2>
@@ -11,9 +11,13 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="form-group">
+    <%= f.label :name, :class => 'control-label' %><br>
+    <%= f.text_field :name, :class => 'form-control' %>
+  </div>
+  <div class="form-group">
+    <%= f.label :diagram_colour, :class => 'control-label' %><br>
+    <%= f.text_field :diagram_colour, :class => 'form-control' %>
   </div>
   <div class="actions">
     <%= f.submit %>
