--- a/app/views/species/_form.html.erb
+++ b/app/views/species/_form.html.erb
@@ -15,11 +15,13 @@
     <%= f.label :name, :class => 'control-label' %><br>
     <%= f.text_field :name, :class => 'form-control' %>
   </div>
+
   <div class="form-group">
     <%= f.label :diagram_colour, :class => 'control-label' %><br>
     <%= f.text_field :diagram_colour, :class => 'form-control' %>
   </div>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => 'btn btn-primary' %>
   </div>
 <% end %>
