--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -11,23 +11,22 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :filename %><br>
-    <%= f.text_field :filename %>
+  <div class="form-group">
+    <%= f.label :filename, :class => 'control-label' %>
+    <%= f.text_field :filename, :class => 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :date %><br>
-    <%= f.date_select :date %>
+
+  <div class="form-group">
+    <%= f.label :date, :class => 'control-label' %>
+    <%= f.datetime_select :timestamp, :class => 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :time %><br>
-    <%= f.time_select :time %>
+
+  <div class="form-group">
+    <%= f.label :annotations, :class => 'control-label' %>
+    <%= f.text_field :annotations, :class => 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :annotations %><br>
-    <%= f.text_field :annotations %>
-  </div>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => 'btn btn-primary' %>
   </div>
 <% end %>
