--- a/app/views/sexes/_form.html.erb
+++ b/app/views/sexes/_form.html.erb
@@ -15,10 +15,12 @@
     <%= f.label :name, :class => 'control-label' %><br>
     <%= f.text_field :name, :class => 'form-control' %>
   </div>
+
   <div class="form-group">
     <%= f.label :diagram_colour, :class => 'control-label' %><br>
-    <%= f.text_field -group :diagram_colour, :class => 'form-control' %>
+    <%= f.text_field :diagram_colour, :class => 'form-control' %>
   </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
