--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -56,7 +56,7 @@
     <tr>
       <th>Bilddatei</th>
       <th>Zeitpunkt</th>
-      <th>Event</th>
+<!--       <th>Event</th> -->
       <th>Spezies</th>
       <th>Geschlecht</th>
       <th>Niederschlag</th>
@@ -71,10 +71,10 @@
       <tr>
         <td>
           <%= link_to image_tag(image.thumbnail_path), image_path(image.path) if image.thumbnail_path %><br>
-          <%= link_to image.filename, image.path if image.path %>
+          <%= image.filename %>
         </td>
         <td><%= image.timestamp %></td>
-        <td><%= image.event.try(:timestamp) || image.possible_events && image.possible_events.map(&:timestamp) %></td>
+<!--         <td><%#= image.event.try(:timestamp) || image.possible_events && image.possible_events.map(&:timestamp) %></td> -->
         <td><%= image.species %></td>
         <td><%= image.sex %></td>
         <td><%= image.precipitation %></td>
