Add temperature to hourly events

--- a/app/views/precipitations/events.html.erb
+++ b/app/views/precipitations/events.html.erb
@@ -79,6 +79,7 @@
     <tr>
       <th>Zeitpunkt</th>
       <th>Niederschlagsmenge</th>
+      <th>Temperatur min/max</th>
 
       <% @selected_sensors.each do |sensor| %>
         <th class="use-in-graph sensor" data-diagram-colour="<%= sensor.diagram_colour %>" style="color: rgb(<%= sensor.diagram_colour %>);">
@@ -110,6 +111,11 @@
         <td>
           <span class="precipitation-amount"><%= precipitation.amount %></span>
           <%= image_tag('rain.png') if precipitation.amount > 0 %>
+        </td>
+
+        <td>
+          <span class="minimal-temperature"><%= precipitation.temperature.try(:min) || 0 %></span>°C/
+          <span class="maximal-temperature"><%= precipitation.temperature.try(:max) || 0 %></span>°C
         </td>
 
         <% @selected_sensors.each do |sensor| %>
